--- a/index.html
+++ b/index.html
@@ -102,7 +102,22 @@
       </div>
     </div>
   </section>
-
+   
+    <section>
+    <div id="" class="list-group">
+      <div class="container">
+        <h2 class="text-center">Computer Software</h2>
+        <li class="list-group-item"> MS Access 2013</li>
+        <li class="list-group-item">MS Word</li>
+        <li class="list-group-item">MS Excel</li>
+        <li type="button" class="list-group-item">MS PowerPoint</li>
+        <li type="button" class="list-group-item">Oracle VM VirtualBox</li>
+        <li type="button" class="list-group-item">WordPress</li>
+        <li type="button" class="list-group-item">Brackets Text Editor</li>
+      </div>
+    </div>
+  </section>
+  
   <section class="bg-dark" id="contact">
     <div class="container">
       <div class="row">
@@ -126,12 +141,12 @@
             <h3>E-Mail</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+       <!-- <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box">
             <a href="http://www.chris-evans-blog.website"><i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i></a>
             <h3>Blog</h3>
           </div>
-        </div>
+        </div> -->
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box">
             <a class="view-pdf" href="#"><i class="fa fa-4x fa-paperclip text-primary sr-icons"></i></a>
